remove comments for achievements section

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -6,23 +6,23 @@ on:
   workflow_dispatch:
     #push: { branches: ["main"] }
 
-    #jobs:
-    #  achievements:
-    #    runs-on: ubuntu-latest
-    #    steps:
-    #      - uses: lowlighter/metrics@latest
-    #        with:
-    #          filename: achievements.svg
-    #          token: ${{ secrets.METRICS_SECRET }}
-    #          committer_token: ${{ secrets.GITHUB_TOKEN }}
-    #          user: rdottin-untuckit
-    #          base: achievements
-    #          plugin_achievements: yes
-    #          plugin_achievements_threshold: B # Display achievements with rank B or higher
-    #          plugin_achievements_secrets: yes # Display unlocked secrets achievements
-    #          plugin_achievements_display: compact # Use compact display
-    #          plugin_achievements_limit: 0 # Display all unlocked achievements (no limit)
-    #
+jobs:
+  achievements:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: achievements.svg
+          token: ${{ secrets.METRICS_SECRET }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          user: rdottin-untuckit
+          base: achievements
+          plugin_achievements: yes
+          plugin_achievements_threshold: B # Display achievements with rank B or higher
+          plugin_achievements_secrets: yes # Display unlocked secrets achievements
+          plugin_achievements_display: compact # Use compact display
+          plugin_achievements_limit: 0 # Display all unlocked achievements (no limit)
+    
     #  github-metrics:
     #    runs-on: ubuntu-latest
     #    steps:
